--- a/scoops.html
+++ b/scoops.html
@@ -9,7 +9,7 @@
   <img style="width: 17%;" src="scoops logo.jpg"></h1>
   </div>
   <div>
- <a href="home.html">HOME</a>
+ <a href="index.html">HOME</a>
  <a href="about.html">ABOUT</a>
  <a href="services.html">SERVICES</a>
   </div>
