--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
   </div>
   
   <div>
-   <a href="home.html">HOME</a>
+   <a href="index.html">HOME</a>
    <a href="about.html">ABOUT</a>
    <a href="services.html">SERVICES</a>
   </div>
